# kube-manifest

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build  cabal.project  cabal.project.freeze  fourmolu.yaml  kube-manifest  kube-manifest.cabal  kubernetes-schema.json  urls.txt
.git-crypt/keys/default/0/: 88DC586CE047AFB7E1A911F5D7936F9E41550065.gpg
.shake/: nonroot.tar
.shake/.shake/: .shake.database
.shake/nonroot/rootfs/etc/: group  passwd
common/: TH.hs  Util.hs
container/: Earthfile
container/archlinux/: Containerfile  mirrorlist
container/base/: Earthfile  files.txt
container/builder/: Containerfile  Earthfile  files.sh  mirrorlist  yay.json
container/gitbucket/: Containerfile  Earthfile  database.conf
container/gitbucket/plugins/: Containerfile
container/mariadb/: Earthfile  install.sql
container/openjdk/: Earthfile
container/php-fpm/: Containerfile
container/s6/: Earthfile
containers/builder/: Containerfile
containers/gitbucket/: Containerfile
manifest/: contour.yaml  dns.yaml  docker-registry.yaml  harbor.yaml  ingress-nginx-controller.yaml  openebs.yaml
manifest/_not-namespaced/: cert-manager.yaml
manifest/_root/: cert-manager.yaml  kubernetes-dashboard.yaml  openebs.yaml
manifest/cert-manager/: cert-manager.yaml  unknown-app.yaml
manifest/dns/: coredns.yaml  dns.yaml
manifest/dns/never-delete/: coredns.yaml
manifest/git/: gitbucket.yaml
manifest/git/never-delete/: gitbucket.yaml
manifest/ingress-nginx/: ingress-nginx-controller.yaml
manifest/kubernetes-dashboard/: kubernetes-dashboard.yaml
manifest/projectcontour/: contour.yaml  envoy.yaml
manifest/registry/: harbor.yaml
manifest/registry/never-delete/: harbor.yaml
manifest/repositry/: harbor.yaml
project/openebs/: werf.yaml
project/openebs/.helm/templates/: manifests.yaml
secret/: Secret.hs  admin.conf  config  nftables.conf
src/: Main.hs  Manifest.hs  Project.hs  TH.hs  Util.hs  pacman.conf
src/Development/Shake/: Container.hs  Tar.hs  Util.hs
src/Manifest/: Util.hs
src/Util/: Shake.hs
src/Util/Shake/: Container.hs
src/cert-manager/: 1inguini-ca-cluster-issuer.yaml  1inguini-ca.yaml  selfsigned-issuer.yaml
src/common/: Util.hs
src/dns/: Corefile
src/gitbucket/: database.conf
src/ingress-nginx/: ingress-nginx-controller.yaml
src/kubernetes-dashboard/: cluster-role-binding.yaml  service-account.yaml
src/manifest/: Main.hs  Manifest.hs  TH.hs
src/manifest/Util/: Manifest.hs
src/manifest/dns/: Corefile
src/openebs/: storage-class.yaml
values/: harbor.yaml  repositryharbor.yaml
values/registry/: harbor.yaml
values/repositry/: harbor.yaml
