cabal-version:      3.0
name:               kube-manifest
version:            0.1.0.0
synopsis:           kubernetes manifest files written in haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/1inguini/kube-manifest

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             1inguini
maintainer:         9647142@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common option
  default-extensions:
    NoFieldSelectors
    BinaryLiterals
    DataKinds
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -fplugin=Data.Record.Anon.Plugin -fconstraint-solver-iterations=10

executable kube-manifest
  import:           option
  main-is:          Main.hs
  other-modules:
    Manifest
    Secret
    TH
    Util

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , aeson-optics
    , base                  ^>=4.16.3.0
    , bytestring
    , casing
    , containers
    , directory
    , file-embed
    , large-anon
    , mtl
    , optics
    , optics-th
    , process
    , safe
    , scientific
    , string-conversions
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
    , yaml

  hs-source-dirs:   src secret
  default-language: Haskell2010

test-suite kube-manifest-test
  import:           option
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base ^>=4.16.3.0
