cabal-version:      3.0
name:               kube-manifest
version:            0.1.0.0
synopsis:           kubernetes manifest files written in haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/1inguini/kube-manifest

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             1inguini
maintainer:         9647142@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
  default-extensions:
    NoFieldSelectors
    AllowAmbiguousTypes
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  build-depends:
    , aeson
    , aeson-optics
    , base                  ^>=4.16.3.0
    , base64
    , bytestring
    , casing
    , containers
    , directory
    , exceptions
    , file-embed
    , filepath
    , heredoc
    , large-anon
    , mtl
    , optics
    , optics-th
    , process
    , safe
    , safe-exceptions
    , scientific
    , string-conversions
    , template-haskell
    , text
    , time
    , unix
    , unordered-containers
    , vector
    , yaml

  -- Modules included in this executable, other than Main.
  other-modules:
    Project
    Secret
    TH
    Util

  ghc-options:
    -threaded -rtsopts "-with-rtsopts=-N -I0 -qg"
    -fplugin=Data.Record.Anon.Plugin -fconstraint-solver-iterations=10
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  default-language:   Haskell2010

executable manifest
  import:         common
  main-is:        Main.hs
  hs-source-dirs: secret src

test-suite kube-manifest-test
  import:           common
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
